--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules
-#/dist
+/dist
 
 
 # local env files
@@ -8,6 +8,7 @@ node_modules
 .env.*.local
 
 # Log files
+.gitignore
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
